--- a/src/main/webapp/index/documentation/karaf-dependencies/karaf-deps-2.4.x.page
+++ b/src/main/webapp/index/documentation/karaf-dependencies/karaf-deps-2.4.x.page
@@ -10,107 +10,107 @@ The below table describes the dependencies included in Apache Karaf 2.4.x builds
 
 Note: Karaf 2.3.8 versions provided for upgrade path considerations.
 
-|| Karaf Version || 2.3.8 || 2.4.0 || 2.4.1 ||
-| aopalliance.bundle | 1.0_6 | 1.0_6 | 1.0_6 |
-| asm.bundle | 4.1 | 5.0.3 | 5.0.3 |
-| bndlib | 2.3.0 | 2.3.0 | 2.3.0 |
-| cglib.bundle | 2.2.2_1 | 3.0_1 | 3.0_1 |
-| commons-beanutils.bundle | 1.9.1 | 1.9.2 | 1.9.2 |
-| commons-codec.bundle | 1.9 | 1.9 | 1.9 |
-| commons-collections.bundle | 3.2.1 | 3.2.1 | 3.2.1 |
-| commons-compress | 1.6 | 1.6 | 1.6 |
-| commons-fileupload | 1.3.1 | 1.3.1 | 1.3.1 |
-| commons-io | 2.4 | 2.4 | 2.4 |
-| commons-lang.bundle | 2.6 | 2.6 | 2.6 |
-| depends-maven-plugin | 1.2 | 1.2 | 1.2 |
-| injection | 1.0 | 1.0 | 1.0 |
-| jasypt.bundle | 1.9.2_1 | 1.9.2_1 | 1.9.2_1 |
-| jetty | 7.6.9.v20130131 | 8.1.10.v20130312 | 8.1.10.v20130312 |
-| junit | 4.10 | 4.11 | 4.11 |
-| org.json | 20131018 | 20140107 | 20140107 |
-| geronimo.annotation-spec | 1.0.1 | 1.0.1 | 1.0.1 |
-| geronimo.jaspic-spec | 1.1 | 1.1 | 1.1 |
-| geronimo.jms-spec | 1.1.1 | 1.1.1 | 1.1.1 |
-| geronimo.jpa-spec | 1.1 | 1.1 | 1.1 |
-| geronimo.jta-spec | 1.1.1 | 1.1.1 | 1.1.1 |
-| geronimo.servlet | 1.2 | 1.0 | 1.0 |
-| easymock | 3.2 | 3.2 | 3.2 |
-| equinox | 3.8.0.v20120529-1548 | 3.9.1-v20140110-1610 | 3.9.1-v20140110-1610 |
-| felix.bundlerepository | 1.6.6 | 2.0.2 | 2.0.2 |
-| felix.configadmin | 1.8.0 | 1.8.0 | 1.8.0 |
-| felix.fileinstall | 3.4.2 | 3.4.2 | 3.4.2 |
-| felix.framework | 4.0.3 | 4.4.1 | 4.4.1 |
-| felix.gogo | 0.10.0 | 0.12.1 | 0.12.1 |
-| felix.plugin | 2.4.0 | 2.5.0 | 2.5.3 |
-| felix.utils | 1.6.0 | 1.6.0 | 1.6.0 |
-| felix.webconsole | 4.2.2 | 4.2.2 | 4.2.2 |
-| felix.webconsole.api | 3.1.2 | 3.1.2 | 3.1.2 |
-| felix.metatype | 1.0.10 | 1.0.10 | 1.0.10 |
-| felix.eventadmin | 1.4.0 | 1.4.0 | 1.4.2 |
-| felix.eventadmin-plugin | 1.1.0 | 1.1.0 | 1.1.0 |
-| felix.obr | 1.0.2 | 1.0.2 | 1.0.2 |
-| felix.scr | 1.8.2 | 1.8.2 | 1.8.2 |
-| hibernate.annotations.common | 3.3.0.ga | 3.3.0.ga | 3.3.0.ga |
-| hibernate.annotations | 3.4.0.GA | 3.4.0.GA | 3.4.0.GA |
-| hibernate.ejb | 3.4.0.GA | 3.4.0.GA | 3.4.0.GA |
-| hibernate3 | 3.3.2.GA | 3.3.2.GA | 3.3.2.GA |
-| hibernate.validator | 5.0.3.Final | 5.0.3.Final | 5.0.3.Final |
-| aries.application | 1.0.0 | 1.0.0 | 1.0.0 |
-| aries.application.api | 1.0.0 | 1.0.0 | 1.0.0 |
-| aries.application.management | 1.0.0 | 1.0.0 | 1.0.0 |
-| aries.blueprint | 1.0.1 | 1.0.1 | 1.0.1 |
-| aries.blueprint.api | 1.0.0 | 1.0.1 | 1.0.1 |
-| aries.blueprint.core | 1.4.0 | 1.4.1 | 1.4.2 |
-| aries.blueprint.cm | 1.0.3 | 1.0.4 | 1.0.5 |
-| aries.blueprint.web | 1.0.1 | 1.0.1 | 1.0.1 |
-| aries.jmx.api | 1.1.0 | 1.1.1 | 1.1.1 |
-| aries.jmx.core | 1.1.1 | 1.1.2 | 1.1.2 |
-| aries.jmx.blueprint.api | 1.1.0 | 1.1.0 | 1.1.0 |
-| aries.jmx.blueprint.core | 1.1.0 | 1.1.0 | 1.1.0 |
-| aries.jpa | 1.0.1 | 1.0.2 | 1.0.2 |
-| aries.jpa.api | 1.0.0 | 1.0.1 | 1.0.2 |
-| aries.jpa.container | 1.0.1 | 1.0.1 | 1.0.2 |
-| aries.jpa.context | 1.0.1 | 1.0.2 | 1.0.4 |
-| aries.jpa.blueprint | 1.0.1 | 1.0.2 | 1.0.4 |
-| aries.jndi | 1.0.0 | 1.0.0 | 1.1.0 |
-| aries.jndi.api | 1.0.0 | 1.0.0 | 1.1.0 |
-| aries.proxy | 1.0.2 | 1.0.3 | 1.0.4 |
-| aries.proxy.api | 1.0.0 | 1.0.1 | 1.0.1 |
-| aries.transaction | 1.0.1 | 1.0.1 | 1.0.1 |
-| aries.transaction.blueprint | 1.0.1 | 1.0.1 | 1.0.1 |
-| aries.transaction.manager | 1.1.0 | n/a | n/a |
-| aries.transaction.jdbc | 1.0.0 | 2.0.0 | 2.0.0 |
-| aries.util | 1.1.0 | 1.1.0 | 1.1.0 |
-| jansi | 1.11 | 1.11 | 1.11 |
-| jline | 2.12 | 2.12 | 2.12 |
-| jsw | 3.2.3 | 3.2.3 | 3.2.3 |
-| log4j | 1.2.17 | 1.2.17 | 1.2.17 |
-| maven | 3.0-alpha-2 | 3.0-alpha-2 | 3.0-alpha-2 |
-| mina | 2.0.7 | 2.0.7 | 2.0.7 |
-| osgi | 4.3.1 | 5.0.0 | 5.0.0 |
-| pax.base | 1.4.0 | 1.4.0 | 1.5.0 |
-| pax.exam | 2.6.0 | 4.1.0 | 4.3.0 |
-| pax.logging | 1.7.4 | 1.7.4 | 1.8.1 |
-| pax.runner | 1.7.6 | n/a | n/a |
-| pax.url | 1.3.7 | 2.1.0 | 2.3.0 |
-| pax.web | 1.1.17 | 3.1.2 | 3.1.2 |
-| pax.tinybundles | 1.3.2 | 1.3.2 | 1.3.2 |
-| plexus.utils | 3.0 | 3.0 | 3.0 |
-| portlet-api | 2.0 | 2.0 | 2.0 |
-| servicemix.specs | 2.4.0 | 2.4.0 | 2.4.0 |
-| servlet.api | 2.5 | 2.5 | 2.5 |
-| slf4j | 1.7.7 | 1.7.7 | 1.7.7 |
-| spring.osgi | 1.2.1 | 1.2.1 | 1.2.1 |
-| spring2 | 2.5.6.SEC03 | 2.5.6.SEC03 | n/a |
-| spring | 3.0.7.RELEASE | 3.0.7.RELEASE | n/a |
-| spring31 | 3.1.4.RELEASE | 3.1.4.RELEASE | 3.1.4.RELEASE |
-| spring32 | 3.2.4.RELEASE | 3.2.9.RELEASE_1 | 3.2.11.RELEASE_1 |
-| spring40 | 4.0.5.RELEASE | 4.0.5.RELEASE_1 | 4.0.7.RELEASE_1 |
-| spring41 | n/a | n/a | 4.1.2.RELEASE_1 |
-| spring.security31 | 3.1.4.RELEASE | 3.1.4.RELEASE | 3.1.4.RELEASE |
-| sshd | 0.12.0 | 0.12.0 | 0.12.0 |
-| struts | 1.3.10_1 | 1.3.10_1 | 1.3.10_1 |
-| xbean | 3.16 | 3.18 | 3.18 |
-| javax.mail | 1.4.5 | 1.4.5 | 1.4.5 |
-| weld | 2.1.1.Final | 2.1.1.Final | 2.1.1.Final |
-| xerces | 2.11.0 | 2.11.0 | 2.11.0 |
+|| Karaf Version || 2.3.8 || 2.4.0 || 2.4.1 || 2.4.2 ||
+| aopalliance.bundle | 1.0_6 | 1.0_6 | 1.0_6 | 1.0_6 |
+| asm.bundle | 4.1 | 5.0.3 | 5.0.3 | 5.0.3 |
+| bndlib | 2.3.0 | 2.3.0 | 2.3.0 | 2.4.0 |
+| cglib.bundle | 2.2.2_1 | 3.0_1 | 3.0_1 | 3.0_1 |
+| commons-beanutils.bundle | 1.9.1 | 1.9.2 | 1.9.2 | 1.9.2 |
+| commons-codec.bundle | 1.9 | 1.9 | 1.9 | 1.10 |
+| commons-collections.bundle | 3.2.1 | 3.2.1 | 3.2.1 | 3.2.1 |
+| commons-compress | 1.6 | 1.6 | 1.6 | 1.6 |
+| commons-fileupload | 1.3.1 | 1.3.1 | 1.3.1 | 1.3.1 |
+| commons-io | 2.4 | 2.4 | 2.4 | 2.4 |
+| commons-lang.bundle | 2.6 | 2.6 | 2.6 | 2.6 |
+| depends-maven-plugin | 1.2 | 1.2 | 1.2 | 1.2 |
+| injection | 1.0 | 1.0 | 1.0 | 1.0 |
+| jasypt.bundle | 1.9.2_1 | 1.9.2_1 | 1.9.2_1 | 1.9.2_1 |
+| jetty | 7.6.9.v20130131 | 8.1.10.v20130312 | 8.1.10.v20130312 | 8.1.15.v20140411 |
+| junit | 4.10 | 4.11 | 4.11 | 4.11 |
+| org.json | 20131018 | 20140107 | 20140107 | 20140107 |
+| geronimo.annotation-spec | 1.0.1 | 1.0.1 | 1.0.1 | 1.0.1 |
+| geronimo.jaspic-spec | 1.1 | 1.1 | 1.1 | 1.1 |
+| geronimo.jms-spec | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 |
+| geronimo.jpa-spec | 1.1 | 1.1 | 1.1 | 1.1 |
+| geronimo.jta-spec | 1.1.1 | 1.1.1 | 1.1.1 | 1.1.1 |
+| geronimo.servlet | 1.2 | 1.0 | 1.0 | 1.0 |
+| easymock | 3.2 | 3.2 | 3.2 | 3.2 |
+| equinox | 3.8.0.v20120529-1548 | 3.9.1-v20140110-1610 | 3.9.1-v20140110-1610 | 3.9.1-v20140110-1610 |
+| felix.bundlerepository | 1.6.6 | 2.0.2 | 2.0.2 | 2.0.4 |
+| felix.configadmin | 1.8.0 | 1.8.0 | 1.8.0 | 1.8.2 |
+| felix.fileinstall | 3.4.2 | 3.4.2 | 3.4.2 | 3.4.2 |
+| felix.framework | 4.0.3 | 4.4.1 | 4.4.1 | 4.4.1 |
+| felix.gogo | 0.10.0 | 0.12.1 | 0.12.1 | 0.12.1 |
+| felix.plugin | 2.4.0 | 2.5.0 | 2.5.3 | 2.5.3 |
+| felix.utils | 1.6.0 | 1.6.0 | 1.6.0 | 1.8.0 |
+| felix.webconsole | 4.2.2 | 4.2.2 | 4.2.2 | 4.2.8 |
+| felix.webconsole.api | 3.1.2 | 3.1.2 | 3.1.2 | 3.1.2 |
+| felix.metatype | 1.0.10 | 1.0.10 | 1.0.10 | 1.0.12 |
+| felix.eventadmin | 1.4.0 | 1.4.0 | 1.4.2 | 1.4.2 |
+| felix.eventadmin-plugin | 1.1.0 | 1.1.0 | 1.1.0 | 1.1.0 |
+| felix.obr | 1.0.2 | 1.0.2 | 1.0.2 | 1.0.2 |
+| felix.scr | 1.8.2 | 1.8.2 | 1.8.2 | 1.8.2 |
+| hibernate.annotations.common | 3.3.0.ga | 3.3.0.ga | 3.3.0.ga | 3.3.0.ga |
+| hibernate.annotations | 3.4.0.GA | 3.4.0.GA | 3.4.0.GA | 3.4.0.GA |
+| hibernate.ejb | 3.4.0.GA | 3.4.0.GA | 3.4.0.GA | 3.4.0.GA |
+| hibernate3 | 3.3.2.GA | 3.3.2.GA | 3.3.2.GA | 3.3.2.GA |
+| hibernate.validator | 5.0.3.Final | 5.0.3.Final | 5.0.3.Final | 5.0.3.Final |
+| aries.application | 1.0.0 | 1.0.0 | 1.0.0 | 1.0.0 |
+| aries.application.api | 1.0.0 | 1.0.0 | 1.0.0 | 1.0.0 |
+| aries.application.management | 1.0.0 | 1.0.0 | 1.0.0 | 1.0.0 |
+| aries.blueprint | 1.0.1 | 1.0.1 | 1.0.1 | 1.0.1 |
+| aries.blueprint.api | 1.0.0 | 1.0.1 | 1.0.1 | 1.0.1 |
+| aries.blueprint.core | 1.4.0 | 1.4.1 | 1.4.2 | 1.4.3 |
+| aries.blueprint.cm | 1.0.3 | 1.0.4 | 1.0.5 | 1.0.6 |
+| aries.blueprint.web | 1.0.1 | 1.0.1 | 1.0.1 | 1.0.1 |
+| aries.jmx.api | 1.1.0 | 1.1.1 | 1.1.1 | 1.1.1 |
+| aries.jmx.core | 1.1.1 | 1.1.2 | 1.1.2 | 1.1.3 |
+| aries.jmx.blueprint.api | 1.1.0 | 1.1.0 | 1.1.0 | 1.1.0 |
+| aries.jmx.blueprint.core | 1.1.0 | 1.1.0 | 1.1.0 | 1.1.0 |
+| aries.jpa | 1.0.1 | 1.0.2 | 1.0.2 | 1.0.2 |
+| aries.jpa.api | 1.0.0 | 1.0.1 | 1.0.2 | 1.0.2 |
+| aries.jpa.container | 1.0.1 | 1.0.1 | 1.0.2 | 1.0.2 |
+| aries.jpa.context | 1.0.1 | 1.0.2 | 1.0.4 | 1.0.4 |
+| aries.jpa.blueprint | 1.0.1 | 1.0.2 | 1.0.4 | 1.0.4 |
+| aries.jndi | 1.0.0 | 1.0.0 | 1.1.0 | 1.1.0 |
+| aries.jndi.api | 1.0.0 | 1.0.0 | 1.1.0 | 1.1.0 |
+| aries.proxy | 1.0.2 | 1.0.3 | 1.0.4 | 1.0.4 |
+| aries.proxy.api | 1.0.0 | 1.0.1 | 1.0.1 | 1.0.1 |
+| aries.transaction | 1.0.1 | 1.0.1 | 1.0.1 | 1.0.2 |
+| aries.transaction.blueprint | 1.0.1 | 1.0.1 | 1.0.1 | 1.0.2 |
+| aries.transaction.manager | 1.1.0 | n/a | n/a | n/a |
+| aries.transaction.jdbc | 1.0.0 | 2.0.0 | 2.0.0 | 2.1.1 |
+| aries.util | 1.1.0 | 1.1.0 | 1.1.0 | 1.1.0 |
+| jansi | 1.11 | 1.11 | 1.11 | 1.11 |
+| jline | 2.12 | 2.12 | 2.12 | 2.12 |
+| jsw | 3.2.3 | 3.2.3 | 3.2.3 | 3.2.3 |
+| log4j | 1.2.17 | 1.2.17 | 1.2.17 | 1.2.17 |
+| maven | 3.0-alpha-2 | 3.0-alpha-2 | 3.0-alpha-2 | 3.0-alpha-2 |
+| mina | 2.0.7 | 2.0.7 | 2.0.7 | 2.0.7 |
+| osgi | 4.3.1 | 5.0.0 | 5.0.0 | 5.0.0 |
+| pax.base | 1.4.0 | 1.4.0 | 1.5.0 | 1.5.0 |
+| pax.exam | 2.6.0 | 4.1.0 | 4.3.0 | 4.5.0 | 
+| pax.logging | 1.7.4 | 1.7.4 | 1.8.1 | 1.8.2 |
+| pax.runner | 1.7.6 | n/a | n/a | n/a |
+| pax.url | 1.3.7 | 2.1.0 | 2.3.0 | 2.4.1 |
+| pax.web | 1.1.17 | 3.1.2 | 3.1.2 | 3.2.0 |
+| pax.tinybundles | 1.3.2 | 1.3.2 | 1.3.2 | 1.3.2 |
+| plexus.utils | 3.0 | 3.0 | 3.0 | 3.0 |
+| portlet-api | 2.0 | 2.0 | 2.0 | 2.0 |
+| servicemix.specs | 2.4.0 | 2.4.0 | 2.4.0 | 2.5.0 |
+| servlet.api | 2.5 | 2.5 | 2.5 | 2.5 |
+| slf4j | 1.7.7 | 1.7.7 | 1.7.7 | 1.7.7 |
+| spring.osgi | 1.2.1 | 1.2.1 | 1.2.1 | 1.2.1 |
+| spring2 | 2.5.6.SEC03 | 2.5.6.SEC03 | n/a | n/a |
+| spring | 3.0.7.RELEASE | 3.0.7.RELEASE | n/a | n/a |
+| spring31 | 3.1.4.RELEASE | 3.1.4.RELEASE | 3.1.4.RELEASE | 3.1.4.RELEASE |
+| spring32 | 3.2.4.RELEASE | 3.2.9.RELEASE_1 | 3.2.11.RELEASE_1 | 3.2.11.RELEASE_1 |
+| spring40 | 4.0.5.RELEASE | 4.0.5.RELEASE_1 | 4.0.7.RELEASE_1 | 4.0.7.RELEASE_1 |
+| spring41 | n/a | n/a | 4.1.2.RELEASE_1 | 4.1.2.RELEASE_1 |
+| spring.security31 | 3.1.4.RELEASE | 3.1.4.RELEASE | 3.1.4.RELEASE | 3.1.4.RELEASE |
+| sshd | 0.12.0 | 0.12.0 | 0.12.0 | 0.14.0 |
+| struts | 1.3.10_1 | 1.3.10_1 | 1.3.10_1 | 1.3.10_1 |
+| xbean | 3.16 | 3.18 | 3.18 | 3.18 |
+| javax.mail | 1.4.5 | 1.4.5 | 1.4.5 | 1.4.5 |
+| weld | 2.1.1.Final | 2.1.1.Final | 2.1.1.Final | 2.1.1.Final |
+| xerces | 2.11.0 | 2.11.0 | 2.11.0 | 2.11.0 | 
