--- a/src/main/webapp/index/community/download.page
+++ b/src/main/webapp/index/community/download.page
@@ -20,13 +20,13 @@ Grab these releases while they are hot!
 
 The latest 4.0.x release is [Karaf 4.0.0.M2|download/karaf-4.0.0.M2-release.html].
 The latest 3.0.x release is [Karaf 3.0.3|download/karaf-3.0.3-release.html].
-The latest 2.4.x release is [Karaf 2.4.1 Release|download/karaf-2.4.1-release.html].
+The latest 2.4.x release is [Karaf 2.4.2 Release|download/karaf-2.4.2-release.html].
 The latest 2.3.x release is [Karaf 2.3.11 Release|download/karaf-2.3.11-release.html].
 
 Releases:
 * [#Karaf 4.0.0.M2]
 * [#Karaf 3.0.3]
-* [#Karaf 2.4.1]
+* [#Karaf 2.4.2]
 * [#Karaf 2.3.11]
 
 {div}
@@ -81,26 +81,26 @@ h3. Manual
 |HTML Manual| [manual-3.0.3.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.3/manual-3.0.3.html] |
 |PDF Manual| [manual-3.0.3.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.3/manual-3.0.3.pdf] |
 
-h2. Karaf 2.4.1
+h2. Karaf 2.4.2
 
-[Release Notes|download/karaf-2.4.1-release.html]
+[Release Notes|download/karaf-2.4.2-release.html]
 
 h3. Binary Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Distribution| [apache-karaf-2.4.1.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.4.1/apache-karaf-2.4.1.zip]|[PGP|http://www.apache.org/dist/karaf/2.4.1/apache-karaf-2.4.1.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.4.1/apache-karaf-2.4.1.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.4.1/apache-karaf-2.4.1.zip.md5]|
-|Unix/Linux/Cygwin Distribution| [apache-karaf-2.4.1.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.4.1/apache-karaf-2.4.1.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.4.1/apache-karaf-2.4.1.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.4.1/apache-karaf-2.4.1.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.4.1-apache-karaf-2.4.1.tar.gz.md5]|
+|Windows Distribution| [apache-karaf-2.4.2.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.4.2/apache-karaf-2.4.2.zip]|[PGP|http://www.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-2.4.2.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.4.2/apache-karaf-2.4.2.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2.tar.gz.md5]|
 
 h3. Source Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-2.4.1-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.4.1/apache-karaf-2.4.1-src.zip]|[PGP|http://www.apache.org/dist/karaf/2.4.1/apache-karaf-2.4.1-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.4.1/apache-karaf-2.4.1-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.4.1/apache-karaf-2.4.1-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.4.1-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.4.1/apache-karaf-2.4.1-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.4.1/apache-karaf-2.4.1-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.4.1/apache-karaf-2.4.1-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.4.1/apache-karaf-2.4.1-src.tar.gz.md5]|
+|Windows Source Distribution| [apache-karaf-2.4.2-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.4.2/apache-karaf-2.4.2-src.zip]|[PGP|http://www.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.4.2-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.4.2/apache-karaf-2.4.2-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.22-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2-src.tar.gz.md5]|
 
 h3. Manual
 ||Description||Download Link||
-|HTML Manual| [manual-2.4.1.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.4.1/manual-2.4.1.html] |
-|PDF Manual| [manual-2.4.1.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.4.1/manual-2.4.1.pdf] |
+|HTML Manual| [manual-2.4.2.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.4.2/manual-2.4.2.html] |
+|PDF Manual| [manual-2.4.2.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.4.2/manual-2.4.2.pdf] |
 
 h2. Karaf 2.3.11
 
