--- a/src/main/webapp/index/community/releases-schedule.page
+++ b/src/main/webapp/index/community/releases-schedule.page
@@ -17,17 +17,17 @@ h2. Karaf
 | karaf-2.1.x | | | EOL/NotActive | 2.1.6 | | |
 | karaf-2.2.x | 4.2 | 5 / 6 | EOL/NotActive | 2.2.9 | | |
 | karaf-2.3.x | 4.3 | 5 / 6 / 7 | Previous Stable/In Maintenance | 2.3.10 | 2.3.11 | 2015/04/08 |
-| karaf-2.4.x | 5 | 7 / 8 | Transition Stable between 2.3.x and 3.0.x/In Maintenance | 2.4.1 | 2.4.2 | 2015/04/14 |
-| karaf-3.0.x | 4.3 (partial 5 support) | 6 / 7 / 8 | Current Stable/In Maintenance | 3.0.3 | 3.0.4 | 2015/04/21 |
-| master (4.0.x) | 5 | 7 / 8 | Development | 4.0.0.M2 | 4.0.0 | 2015/04/21 |
+| karaf-2.4.x | 5 | 7 / 8 | Transition Stable between 2.3.x and 3.0.x/In Maintenance | 2.4.2 | 2.4.3 | 2015/06/14 |
+| karaf-3.0.x | 4.3 (partial 5 support) | 6 / 7 / 8 | Current Stable/In Maintenance | 3.0.3 | 3.0.4 | 2015/05/02 |
+| master (4.0.x) | 5 | 7 / 8 | Development | 4.0.0.M2 | 4.0.0.M3 | 2015/05/08 |
 
 h2. Cellar
 
 || Release Branch || Karaf || Status || Latest Version || Next Version || ETA ||
 | cellar-2.2.x | 2.2.x | EOL/NotActive | 2.2.6 | | |
-| cellar-2.3.x | 2.3.x | Previous Stable/In Maintenance | 2.3.5 | 2.3.6 | 2015/05/24 |
-| cellar-3.0.x | 3.0.x | Current Stable/In Maintenance | 3.0.2 | 3.0.3 | 2014/05/24 |
-| master (4.0.x) | 4.0.x | Development | | 4.0.0 | 2014/04/24 |
+| cellar-2.3.x | 2.3.x | Previous Stable/In Maintenance | 2.3.5 | 2.3.6 | 2015/05/28 |
+| cellar-3.0.x | 3.0.x | Current Stable/In Maintenance | 3.0.2 | 3.0.3 | 2014/05/28 |
+| master (4.0.x) | 4.0.x | Development | | 4.0.0 | 2014/05/08 |
 
 h2. Cave
 
